--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.5.2
 cloudinary==1.30.0
 dj-database-url==0.5.0
 dj-rest-auth==2.2.5
-Django==3.2.15d
+Django==3.2.15
 django-allauth==0.50.0
 django-cloudinary-storage==0.3.0
 django-cors-headers==3.13.0
