--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-allauth==0.50.0
 django-cloudinary-storage==0.3.0
 django-cors-headers==3.13.0
 django-filter==22.1
+django-heroku==0.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.1
 gunicorn==20.1.0
@@ -19,3 +20,4 @@ pytz==2022.2.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
 types-cryptography==3.3.23
+whitenoise==6.2.0
